<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pormob.aq.fragments.ProfileFragment"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="#EDD9CF">

    <!-- USER DATA CONTAINER -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="20dip">

            <!-- PROGRESS BAR -->
            <ProgressBar
                android:id="@+id/profile_activity_progress_bar"
                android:layout_width="30dip"
                android:layout_height="30dip"
                android:visibility="invisible"
                android:layout_margin="20dip"/>

            <!-- PROFILE IMAGE -->
            <ImageView
                android:id="@+id/profile_activity_imageview_profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:paddingRight="60dp"
                app:srcCompat="@drawable/ic_add_a_photo_black_24dp"
                />

        </LinearLayout>


        <!-- PROFILE USERNAME -->
        <EditText
            android:id="@+id/profile_activity_edit_text_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusedByDefault="false"
            android:textSize="13sp"
            android:text="@string/text_input_username"
            android:layout_margin="10dip"/>

        <!-- PROFILE EMAIL CONTAINER -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="20dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_email"
                android:textColor="#000"
                android:textSize="13sp"
                android:textStyle="bold"/>

            <!-- PROFILE EMAIL -->
            <TextView
                android:id="@+id/profile_activity_text_view_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textColor="#000"
                android:paddingLeft="10dip"/>

        </LinearLayout>


    </LinearLayout>

    <!-- BUTTONS CONTAINER -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        android:layout_weight="1">

        <Button
            android:id="@+id/profile_activity_button_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_update_account"
            android:textColor="#fff"
            android:textSize="13sp"
            android:background="@drawable/button_radius_primary_color"
            android:layout_margin="10dip"
            android:padding="10dip"/>

        <Button
            android:id="@+id/profile_activity_button_copy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_copy_uid"
            android:textColor="#fff"
            android:textSize="13sp"
            android:background="@drawable/button_radius_primary_color"
            android:layout_margin="10dip"
            android:padding="10dip"/>

        <Button
            android:id="@+id/profile_activity_button_sign_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_sign_out_account"
            android:textColor="#fff"
            android:textSize="13sp"
            android:background="@drawable/button_radius_accent_color"
            android:layout_margin="10dip"
            android:padding="10dip"/>

        <Button
            android:id="@+id/profile_activity_button_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_delete_account"
            android:textColor="#fff"
            android:textSize="13sp"
            android:background="@drawable/button_radius_error_color"
            android:layout_margin="10dip"
            android:padding="10dip"/>

    </LinearLayout>

</LinearLayout>